envoy-docker/envoy.yaml
static_resources:
  listeners:
    - name: envoy_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: grpc_service }
                http_filters:
                  - name: envoy.router
  clusters:
    - name: grpc_service
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      type: EDS
      eds_cluster_config:
        eds_config:
          api_config_source:
            api_type: REST
            cluster_names: [eds_cluster]
            refresh_delay: 5s
    - name: eds_cluster
      connect_timeout: 5s
      type: STATIC
      hosts: [{ socket_address: { address: 10.0.0.112, port_value: 7070 }}]
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 127.0.0.1, port_value: 9090 }
